force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__Account__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer account. Defaulted on create from the opportunity.</description>
        <inlineHelpText>Customer account for this quote. Defaults to the account for the opportunity when creating a quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>WebQuotes</relationshipName>
        <type>Lookup</type>
    </CustomField>