force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__AdditionalDiscountAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Amount of additional discount on this quote.</description>
        <formula>SBQQ__RegularAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount additionally discounted on this quote manually.</inlineHelpText>
        <label>Addl. Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>