force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__BatchQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>For products sold in batches quantity in each batch. Defaulted from the product record.</description>
        <inlineHelpText>Indicates quantity in each batch if products are sold in batches.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>