force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__CustomerAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CustomerAmount__c</fullName>
        <description>Roll up summary of the Customer Amount.</description>
        <inlineHelpText>Roll up summary of the Customer Amount.</inlineHelpText>
        <label>Customer Amount</label>
        <summarizedField>SBQQ__WebQuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__WebQuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__WebQuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>