force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__CustomerDiscount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CustomerDiscount__c</fullName>
        <description>Additional discount extended to customer.</description>
        <inlineHelpText>Additional discount extended to the customer on this quote. You&#39;ll be able to override this value at individual line item level. Any line items that don&#39;t have additional discount explicitly specified will default to this value.</inlineHelpText>
        <label>Additional  Disc. (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>