force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__DefaultTemplate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DefaultTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template that should be used with this quote. Salesforce CPQ will use this value to default template selection on &quot;Generate Document&quot; screen.</description>
        <inlineHelpText>Template that should be used with this quote. Salesforce CPQ will use this value to default template selection on &quot;Generate Document&quot; screen.</inlineHelpText>
        <label>Default Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>WebQuotes</relationshipName>
        <type>Lookup</type>
    </CustomField>