force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__DeliveryMethod__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DeliveryMethod__c</fullName>
        <description>Method used to deliver products in this quote.</description>
        <inlineHelpText>Method used to deliver products in this quote.</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Ship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>