force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__FirstSegmentTermEndDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FirstSegmentTermEndDate__c</fullName>
        <description>Used with multi-segment Products to prorate first segment.</description>
        <inlineHelpText>Used with multi-segment Products to prorate first segment.</inlineHelpText>
        <label>First Segment Term End Date</label>
        <type>Date</type>
    </CustomField>