force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__MasterContract__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MasterContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master contract with which subscription products in this quote are to be co-terminated.</description>
        <inlineHelpText>Master contract with which subscription products in this quote are to be co-terminated.</inlineHelpText>
        <label>Master Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Co-Terminated Quotes</relationshipLabel>
        <relationshipName>CoTerminatedWebQuotes</relationshipName>
        <type>Lookup</type>
    </CustomField>