force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__NetAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NetAmount__c</fullName>
        <description>Total Net Amount of each non-optional line item in this quote.</description>
        <inlineHelpText>Total Net Amount of each non-optional line item in this quote.</inlineHelpText>
        <label>Net Amount</label>
        <summarizedField>SBQQ__WebQuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__WebQuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__WebQuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>