force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__Opportunity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity being quoted.</description>
        <inlineHelpText>Opportunity being quoted.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>WebQuotes</relationshipName>
        <type>Lookup</type>
    </CustomField>