force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__OriginalQuote__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OriginalQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the quote is an Amend Re-Quote this field points to the original quote.</description>
        <inlineHelpText>If this Quote record represents an Amend Re-Quote, use this field to link back to the original quote.</inlineHelpText>
        <label>Original Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>WebAmend: Re-Quotes</relationshipLabel>
        <relationshipName>WebChangeOrders</relationshipName>
        <type>Lookup</type>
    </CustomField>