force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__PaymentTerms__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PaymentTerms__c</fullName>
        <description>Terms that govern payment of the items in this quote.</description>
        <inlineHelpText>Terms that govern payment of the items in this quote.</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on receipt</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                    <label>Net 30</label>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>