force-app/main/default/objects/SBQQ__WebQuote__c/fields/SBQQ__SelfServiced__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SelfServiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this web quote is self service.</description>
        <inlineHelpText>Indicates whether this web quote is self service.</inlineHelpText>
        <label>Self Serviced</label>
        <type>Checkbox</type>
    </CustomField>