force-app/main/default/objects/SBQQ__WebQuote__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Account__c</columns>
        <columns>SBQQ__SalesRep__c</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__ExpirationDate__c</columns>
        <columns>SBQQ__ListAmount__c</columns>
        <columns>SBQQ__NetAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>